Added syllabus. Updated office hours.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <!--meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1"-->
 <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-<title>CSC1006HS, UofT</title>
+<title>CSC2621HS, UofT</title>
 
 <!-- Bootstrap -->
 <link href="./css/bootstrap.min.css" rel="stylesheet" media="screen">
@@ -20,7 +20,7 @@
 
 <div class="container theme-showcase" role="main">
     <div class="page-header">
-        <h1>Imitation Learning for Robotics, Winter 2019, CSC2621HS </h1>
+        <h1>Imitation Learning for Robotics, Winter 2019, CSC2621</h1>
     </div>
 
     <!--div class="imgs">
@@ -63,7 +63,7 @@
           <div>Instructor</div>
           <div><a href="http://www.cs.toronto.edu/~florian">Florian Shkurti</a></div>
           <div>x@cs.toronto.edu, x=florian</div>
-	  <div>Office Hours: TBA</div>
+	  <div>Office Hours: Tue 4-6pm, <a href="https://goo.gl/maps/nHCAkpWCcV72">PT283E</a></div>
 	</div>  
       </div>
 
@@ -87,8 +87,7 @@
         <h3>Grading and Important Dates</h3>
 	<ul>
           <li><b>Presentations</b> (20%): Each student enrolled in the class will present at least one paper and they will be graded based on the clarity of the
-	    presentation, the depth of their understanding of the material, and how well they address questions from the audience. Students who present will give
-	    a practice presentation during office hours at the beginning of the week (time TBA), to ensure presentations of high quality.</li>
+	    presentation, the depth of their understanding of the material, and how well they address questions from the audience. Students who are scheduled to present on a given week will give a practice presentation to the instructor on Monday that week at 5:30-7pm at PT283E, to ensure presentations of high quality.</li>
 
 	  
 	  <!--li><b>Paper Reviews</b> (10%): Every week, each student enrolled in the class will submit a paper review, by email, on Thursday by 6pm.
@@ -170,7 +169,7 @@
 			  
 			</td>
                         <td></td>
-                        <td><a href="Quiz_0.pdf">Quiz 0</a></td>
+                        <td><a href="Quiz_0.pdf">Quiz 0</a><br/><a href="Syllabus_CSC2621w19.pdf">Syllabus</a></td>
                     </tr>
 
 
@@ -508,7 +507,7 @@
         <li>Related sections from <a href="https://www.edx.org/course/underactuated-robotics-mitx-6-832x-0">Russ Tedrake's underactuated robotics course</a>
       </ul>  
     </div>
-
+    
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.3/jquery-ui.min.js"></script>
