--- a/index.html
+++ b/index.html
@@ -495,6 +495,15 @@
     </div>
 
 
+    <div class="rc">
+      <h3>Resources for ML</h3>
+      <ul>
+        <li><a href="https://pytorch.org/">PyTorch</a></li>
+        <li><a href="https://www.tensorflow.org/">Tensorflow</a></li>
+        <li><a href="https://gpytorch.ai/">GPyTorch</a> (for gaussian processes)</li>
+      </ul>
+    </div>
+
     
     <div class="rc">
       <h3>Recommended courses</h3>
