--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
 	  <li><b>Assignment</b> (20%): Topic TBA. Will be posted on Jan 18. Will be due Feb 1.</li>
 	  
-	  <li><b>Project Proposal</b> (10%): Due Feb 6. Students can take on projects individually, or in groups of up to three people.
+	  <li><b>Project Proposal</b> (10%): Due Feb 6. Students can take on projects in groups of 2-3 people.
 	    Tips for a good project proposal can be found <a href="">here</a>. Proposals should not be based only on papers covered in class by Feb 6th.
 	    Students are encouraged to look further ahead in the schedule and to start planning their project definition well ahead of this deadline.
 	    Students who need help choosing or crystallizing a project idea should email the instructor. Project proposals that involve the use of real
