Added assignment to the course website

--- a/index.html
+++ b/index.html
@@ -96,9 +96,9 @@
 	    they should follow <a href="paper_review_structure.txt">this structure</a>.
 	  </li-->
 
-	  <li><b>Assignment</b> (20%): Topic TBA. Will be posted on Jan 18. Will be due Feb 1.</li>
+	  <li><b>Assignment</b> (20%): The assignment is now posted <a href="assignments/A1/tex/A1.pdf">here</a></li>
 	  
-	  <li><b>Project Proposal</b> (10%): Due Feb 6. Students can take on projects in groups of 2-3 people.
+	  <li><b>Project Proposal</b> (10%): Due Feb 11th at 6pm. Students can take on projects in groups of 2-3 people.
 	    Tips for a good project proposal can be found <a href="">here</a>. Proposals should not be based only on papers covered in class by Feb 6th.
 	    Students are encouraged to look further ahead in the schedule and to start planning their project definition well ahead of this deadline.
 	    Students who need help choosing or crystallizing a project idea should email the instructor. Project proposals that involve the use of real
