--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
 
 	  <li><b>Assignment</b> (20%): The assignment is now posted <a href="assignments/A1/tex/A1.pdf">here</a></li>
 	  
-	  <li><b>Project Proposal</b> (10%): Due Feb 11th at 6pm. Students can take on projects in groups of 2-3 people.
-	    Tips for a good project proposal can be found <a href="">here</a>. Proposals should not be based only on papers covered in class by Feb 6th.
+	  <li><b>Project Proposal</b> (10%): Due Feb 11 at 6pm. Students can take on projects in groups of 2-3 people.
+	    Tips for a good project proposal can be found <a href="">here</a>. Proposals should not be based only on papers covered in class by Feb 11th.
 	    Students are encouraged to look further ahead in the schedule and to start planning their project definition well ahead of this deadline.
 	    Students who need help choosing or crystallizing a project idea should email the instructor. Project proposals that involve the use of real
 	    robot hardware should clearly indicate so, to allow sufficient time for the instructor to arrange this.
