Updated home page

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <h3>Grading and Important Dates</h3>
 	<ul>
           
-	  <li><b>Assignment 1</b> (25%): due Jan 27, at 6pm ET</li>
+	  <li><b><a href="assignments/A1/A1.pdf">Assignment 1</a></b> (25%): due Jan 28, at 6pm ET</li>
 	  
 	  <li><b>Assignment 2</b> (25%): due Feb 12, at 6pm ET</li>
 
