Added gpu acceleration

--- a/index.html
+++ b/index.html
@@ -536,12 +536,13 @@
           <li><a href="http://www.coppeliarobotics.com/">V-REP</a> (robot arms, humanoids, hexapods)</li>
           <li><a href="https://github.com/deepmind/lab">DeepMind Lab</a> (navigation in mazes)</li>
           <li><a href="https://github.com/StanfordVL/GibsonEnv">Gibson environment</a> (navigation, locomotion in indoor environments, needs a GPU)</li>
-          <li><a href="https://github.com/stepjam/RLBench">RLBench</a>(vision-based manipulation, has demonstrations)</li>
-	  <li><a href="https://clvrai.github.io/furniture/">IKEA furniture assembly environment</a>(vision-based dual-arm manipulation for furniture assembly)</li>
-	  <li><a href="https://askforalfred.com/">ALFRED</a>(vision and language based navigation and manipulation)</li>
-	  <li><a href="https://sites.google.com/view/d4rl/home">D4RL</a>(manipulation and navigation datasets for offline RL)</li>
-	  <li><a href="https://roboturk.stanford.edu/">RoboTurk</a>(demonstration data for manipulation)</li>
-	  <li><a href="https://aihabitat.org/">AI Habitat</a>(visual navigation)</li>
+          <li><a href="https://github.com/stepjam/RLBench">RLBench</a> (vision-based manipulation, has demonstrations)</li>
+	  <li><a href="https://clvrai.github.io/furniture/">IKEA furniture assembly environment</a> (vision-based dual-arm manipulation for furniture assembly)</li>
+	  <li><a href="https://askforalfred.com/">ALFRED</a> (vision and language based navigation and manipulation)</li>
+	  <li><a href="https://sites.google.com/view/d4rl/home">D4RL</a> (manipulation and navigation datasets for offline RL)</li>
+	  <li><a href="https://roboturk.stanford.edu/">RoboTurk</a> (demonstration data for manipulation)</li>
+	  <li><a href="https://aihabitat.org/">AI Habitat</a> (visual navigation)</li>
+	  <li><a href="https://developer.nvidia.com/isaac-gym">Isaac Gym</a> (gym environments and more, but blazing fast, end-to-end GPU accelerated)</li>
 	  
           
 	</ul>
