Added more simulators

--- a/index.html
+++ b/index.html
@@ -546,6 +546,8 @@
 	  <li><a href="https://aihabitat.org/">AI Habitat</a> (visual navigation)</li>
 	  <li><a href="https://developer.nvidia.com/isaac-gym">Isaac Gym</a> (gym environments and more, but blazing fast, end-to-end GPU accelerated)</li>
 	  <li><a href="https://raisim.com/">RaiSim</a> (supports biomechanics of human motion, as well as quadrupeds)</li>
+	  <li><a href="https://uzh-rpg.github.io/flightmare/">Flightmare</a> (fast multi-quadrotor simulation)</li>
+	  <li><a href="https://github.com/utiasDSL/gym-pybullet-drones">PyBullet Drones</a> (fast multi-quadrotor simulation, more aerodynamic effects)</li>
 	  
           
 	</ul>
