--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
           
 	  <li><b><a href="https://github.com/florianshkurti/csc2626w21/blob/master/assignments/A1/A1.pdf">Assignment 1</a></b> (25%): due Jan 28, at 6pm ET</li>
 	  
-	  <li><b>Assignment 2</b> (25%): due Feb 12, at 6pm ET</li>
+	  <li><b>Assignment 2</b> (25%): due Apr 5th, at 6pm ET, (posted on Quercus)</li>
 
 	  
 	  <li><b>Project Proposal</b> (10%): Due Feb 17 at 6pm. Students can take on projects in groups of 2-3 people.
