Removed assignment links

--- a/index.html
+++ b/index.html
@@ -101,9 +101,9 @@
         <h3>Grading and Important Dates</h3>
 	<ul>
           
-	  <li><b><a href="https://github.com/florianshkurti/csc2626w22/blob/master/assignments/A1/A1.pdf">Assignment 1</a></b> (25%): due Sep 27 at 6pm ET</li>
+	  <li><b>Assignment 1</b> (25%): due Sep 27 at 6pm ET</li>
 	  
-	  <li><b><a href="https://github.com/florianshkurti/csc2626w22/blob/master/assignments/A2/CSC2626_Assignment_2.pdf">Assignment 2</a></b> (25%): due Oct 18th at 6pm ET</li>
+	  <li><b>Assignment 2</b> (25%): due Oct 18th at 6pm ET</li>
 
 	  
 	  <li><b>Project Proposal</b> (10%): due Oct 25 at 6pm. Students can take on projects in groups of 2-3 people.
