--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         <h3>Grading and Important Dates</h3>
 	<ul>
           
-	  <li><b>Assignment 1</b> (25%): due Sep 27 at 6pm ET</li>
+	  <li><b><a href="https://github.com/florianshkurti/csc2626w22/blob/master/assignments/A1/A1.pdf">Assignment 1</a></b> (25%): due Sep 27 at 6pm ET</li>
 	  
 	  <li><b>Assignment 2</b> (25%): due Oct 18th at 6pm ET</li>
 
