Added office hours and changed location

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 	  <a href="https://khodeir.github.io/">Mohamed Khodeir</a>, 
 	  and <a href="">Skylar Hao</a></div>
 	  <div>y@cs.toronto.edu, y=csc2626-tas</div>
-	  <div>Office Hours: TBA, on Zoom</div>
+	  <div>Office Hours: Tuesdays 11-12pm ET and Thursdays 11-12pm ET, on Zoom</div>
 	</div>
 
 	
@@ -81,8 +81,8 @@
 
       <h3>Course Details</h3>
       <div id="dts">
-        <div class="ts">
-          <div>Lectures: Wednesdays, 11am-1pm ET (in-person at Galbraith Building 244 + lectures recorded on Zoom)</div>
+        <div cla-ss="ts">
+          <div>Lectures: Wednesdays, 11am-1pm ET (in-person, OISE Building 2122, lectures recorded on Zoom)</div>
 	  <div>Zoom link is posted on the course's Quercus homepage</div>
 	  <div>Announcements will be posted on Quercus</div>
 	  <div>Discussions will take place on <a href="http://www.piazza.com/utoronto.ca/fall2022/csc2626">Piazza</a></div>
