--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@
 	  <a href="https://khodeir.github.io/">Mohamed Khodeir</a>, 
 	  and <a href="">Skylar Hao</a></div>
 	  <div>y@cs.toronto.edu, y=csc2626-tas</div>
-	  <div>Office Hours: Tuesdays 11-12pm ET and Thursdays 11-12pm ET, on Zoom</div>
+	  <div>Office Hours (Jonathan): Tue 11-12pm ET, on Zoom</div>
+	   <div>Office Hours (Skylar): Thu 11-12pm ET, on Zoom</div>
 	</div>
 
 	
