--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           <div><a href="https://www.cs.toronto.edu/~lorraine/">Jonathan Lorraine</a>, 
 	  <a href="https://khodeir.github.io/">Mohamed Khodeir</a>, 
 	  and <a href="">Skylar Hao</a></div>
-	  <div>y@cs.toronto.edu, y=csc2626-tas</div>
+	  <div>Please use csc2626-tas@cs.toronto.edu, not personal emails</div>
 	  <div>Office Hours (Jonathan): Tue 11-12pm ET, on Zoom</div>
 	   <div>Office Hours (Skylar): Thu 11-12pm ET, on Zoom</div>
 	</div>
@@ -83,7 +83,7 @@
       <h3>Course Details</h3>
       <div id="dts">
         <div cla-ss="ts">
-          <div>Lectures: Wednesdays, 11am-1pm ET (in-person, OISE Building 2122, lectures recorded on Zoom)</div>
+          <div>Lectures: Wednesdays, 11am-1pm ET (in-person, OISE Building 2-212, lectures recorded on Zoom)</div>
 	  <div>Zoom link is posted on the course's Quercus homepage</div>
 	  <div>Announcements will be posted on Quercus</div>
 	  <div>Discussions will take place on <a href="http://www.piazza.com/utoronto.ca/fall2022/csc2626">Piazza</a></div>
