Tiny updates to A2.

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 	
 	In the next few decades we are going to witness millions of people, from various backgrounds and levels of technical expertise, needing to
 	effectively interact with robotic technologies on a daily basis. As such, people will need to modify the behavior of their robots without
-	explicitly writing code, but by providing only a small number of kinesthetic or visual demonstrations. At the same time, robots should try to
+	explicitly writing code, but by providing only a small number of kinesthetic or visual demonstrations, or even natural language commands. At the same time, robots should try to
 	infer and predict the human's intentions and internal objectives from past interactions, in order to provide assistance before it is explicitly asked.
 	This <b>graduate-level course</b> will examine some of the most important papers in imitation learning for robot control, placing more emphasis on developments
 	in the last 10 years. Its purpose is to familiarize students with the frontiers of this research area, to help them identify open problems, and
@@ -104,7 +104,7 @@
           
 	  <li><b><a href="https://github.com/florianshkurti/csc2626w22/blob/master/assignments/A1/A1.pdf">Assignment 1</a></b> (25%): due Oct 3 at 6pm ET</li>
 	  
-	  <li><b>Assignment 2</b> (25%): due Oct 18th at 6pm ET</li>
+	  <li><b><a href="https://github.com/florianshkurti/csc2626w22/blob/master/assignments/A2/CSC2626_Assignment_2.pdf">Assignment 2</a></b> (25%): due Oct 18th at 6pm ET</li>
 
 	  
 	  <li><b>Project Proposal</b> (10%): due Oct 25 at 6pm. Students can take on projects in groups of 2-3 people.
